fix spacing in width

--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    max-width: 1300px;
+    max-width: 1400px;
     padding: 0 2rem;;
     margin: 0 auto;
     overflow: auto;
