--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,7 +120,7 @@ a {
     aside {
       width: 60%;
       margin: 0 auto;
-      padding: 1rem 0;
+      padding: 1rem 0 1.2rem 0;
       text-align: center;
       font-weight: 400;
       font-style: italic;
